--- a/src/app/modules/auth-components/login/login.component.html
+++ b/src/app/modules/auth-components/login/login.component.html
@@ -1,4 +1,5 @@
 
+ <app-loader *ngIf="showLoader"></app-loader>
  <div class="auth-container">
     <div class="forms-container">
       <div class="signin-signup">
@@ -8,14 +9,14 @@
             <i class="fas fa-user"></i>
             <input type="text" autocomplete="username" placeholder="Username" formControlName="email">
           </div>
-          <!-- <app-errors [control]="loginForm.controls.email"></app-errors> -->
+          <app-errors [control]="loginForm.controls.email"></app-errors>
 
           <div class="input-field">
             <i class="fas fa-lock"></i>
             <input type="password"  placeholder="Password" id="id_password" formControlName="password" required="yes">
             <i class="far fa-eye" id="togglePassword" style="cursor: pointer;"></i>
           </div>
-          <!-- <app-errors [control]="loginForm.controls.password"></app-errors> -->
+          <app-errors [control]="loginForm.controls.password"></app-errors>
           <a href="#" class="key use-keyboard-input">Virtual keyboard</a>
           <a class="pass" href="#">Forgot your password?</a>
           <button type="submit" value="Sign in" class="btn solid">sign in</button>
